src/styles/globals.scss
/* ... */
.ant-popover-inner {
  padding: 24px !important;
  margin-bottom: 16px !important;
}

.ant-popover {
  font-family: 'Roboto', sans-serif !important;
}

#lms-pro #hubspot-messages-iframe-container {
  z-index: 999 !important;
}

#hubspot-messages-iframe-container.visible-icon iframe,
#hubspot-messages-iframe-container .visible-icon {
  display: none !important;
}

#hubspot-messages-iframe-container.visible-icon,
#hubspot-messages-iframe-container .visible-icon {
  position: inherit !important;
}

#floating-button:hover,
#close_icon:hover,
#back-to-top:hover {
  transition: transform 100ms ease-in-out 0s;
  transform: scale(1.1);
}

.svg-container:hover path {
  @apply fill-primary;
}

.ant-modal {
  font-family: 'Roboto', sans-serif !important;
}

.content-course div strong {
  @apply font-medium text-bw-1;
}

.sapp-custom--modal .ant-modal-content {
  @apply h-[100vh] w-[100vw] max-w-none bg-transparent;
}

.ant-modal.sapp-custom--modal {
  width: -webkit-fill-available !important;
  @apply max-w-none;
}

// .ant-modal-wrap.ant-modal-centered {
//   @apply w-fit
// }

.tooltip-box div span p {
  @apply mb-0 ml-2;
}

.videoContainer {
  @apply relative h-auto w-full;
}

.loadingOverlay {
  transform: translate(-50%, -50%);
  @apply absolute left-[50%] top-[50%] z-10 rounded-[5px] p-2.5 text-bw-1;
}

.hotline ins {
  @apply cursor-default no-underline;
}

.fanpage ins {
  @apply no-underline hover:underline;
}

.result-scroll {
  &::-webkit-scrollbar {
    @apply h-4 w-1.5 border bg-bw-3;
  }

  &::-webkit-scrollbar-track {
    @apply border;
  }

  &::-webkit-scrollbar-thumb {
    @apply border bg-primary;
  }
}

.dashboard-scroll-x,
.dashboard-scroll-y {
  overflow: hidden;
}

.dashboard-scroll-x:hover {
  overflow-x: auto;
}

.dashboard-scroll-y:hover {
  overflow-y: auto;
}

.sapp-custom-hover.button-icon:hover {
  @apply bg-transparent;
}

br {
  content: '';
  @apply m-2 block text-sm;
}

td.py-5.px-3.sapp-table-quiz {
  border-width: 0px;
}

.sapp-border-none {
  border: 0;
}

.card {
  width: 100%;
  border-radius: var(--border-radius);
}

.card .inner {
  color: #fff;
  border-radius: var(--border-radius);
}

.active-section {
  outline-width: 1px;
  outline-offset: 0;
  outline-color: #ffb800;
  outline-style: solid;
  animation: animateOutline 4s ease infinite;
}

@keyframes animateOutline {
  0% {
    outline-width: 1px;
    outline-offset: 0;
    outline-color: rgba(0, 130, 206, 0);
  }

  10% {
    outline-color: #ffb800;
  }

  /* The animation finishes at 50% */
  50% {
    outline-width: 3px;
    outline-offset: 4px;
    outline-color: rgba(0, 130, 206, 0);
  }

  100% {
    outline-width: 4px;
    outline-offset: 4px;
    outline-color: rgba(102, 102, 102, 0);
  }
}

.responsive-truncate-container {
  overflow: auto;
  width: 95%;
  min-width: 100px;
  max-width: 100%;
}

.sapp-modal--comment .ant-modal-content {
  @apply max-h-[640px] min-h-[400px] p-0;
}

.pined-noti p {
  @apply mb-0;
}
.ant-menu {
  @apply bg-blue-2;
}

.ant-menu-item-selected {
  background-color: rgba(255, 255, 255, 0.1) !important;
}

.ant-menu-item:hover {
  background-color: rgba(255, 255, 255, 0.05) !important;
}

.ant-layout-sider-children {
  @apply flex h-full flex-col;
}
td.sapp-border {
  @apply border-0;
}

.tooltip-container {
  @apply relative inline-block;
}

.tooltip-text {
  @apply invisible absolute z-10 rounded-lg border border-gray-200 bg-white p-4 text-left text-gray-800 shadow-lg transition-transform duration-300;
  min-width: 300px;
  padding: 15px;
  border-radius: 8px;
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
  top: 100%;
  left: 0;
  white-space: normal;
  word-wrap: break-word;
}

.tooltip-text::after {
  content: '';
  @apply absolute bg-white;
  top: -5px;
  left: 20px;
  transform: rotate(45deg);
  width: 10px;
  height: 10px;
  border-top: 1px solid rgba(0, 0, 0, 0.1);
  border-left: 1px solid rgba(0, 0, 0, 0.1);
}

.tooltip-container:hover .tooltip-text {
  @apply visible opacity-100;
  transform: translateY(0);
}

.form-columns-2 .input,
.form-columns-1 .input {
  @apply w-full;
}

.hs-button {
  @apply h-[48px] w-full cursor-pointer text-lg font-semibold;
}

.form-columns-1 .hs-input {
  @apply w-full;
}

form fieldset.form-columns-2 {
  @apply w-[565px];
}

.input .hs-input {
  @apply h-[50px] w-full border-gray-2;
}

fieldset.form-columns-2 .hs-form-field {
  @apply mb-6;
}

fieldset.form-columns-1 .hs-input {
  width: 100% !important;
}

.hs-dependent-field {
  @apply mb-8;
}

.hs_firstname.hs-firstname,
.hs_email.hs-email,
.hs_phone.hs-phone,
.hs_n_m_sinh.hs-n_m_sinh,
.hs_kh_a_h_c.hs-kh_a_h_c,
.hs_khu_v_c.hs-khu_v_c {
  label {
    span {
      @apply text-sm font-medium text-bw-1;
    }

    .hs-form-required {
      @apply ms-1 text-state-error;
    }
  }
}

.hs_khu_v_c.hs-khu_v_c.hs-fieldtype-select.field.hs-form-field {
  @apply mt-6;
}

.hs_firstname.hs-firstname.hs-fieldtype-text.field.hs-form-field,
.hs_phone.hs-phone.hs-fieldtype-phonenumber.field.hs-form-field {
  @apply pr-3;
}

.hs_email.hs-email.hs-fieldtype-text.field.hs-form-field,
.hs_n_m_sinh.hs-n_m_sinh.hs-fieldtype-number.field.hs-form-field {
  @apply ps-3;
}

.sapp-trial .ant-modal-content {
  @apply p-[68px];
}

.ellipsis-text {
  max-width: 150px; /* Adjust width as needed */
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
}

[type='text']:focus,
[type='email']:focus,
[type='tel']:focus,
[type='number']:focus,
select:focus {
  --tw-ring-color: #ffb800;
}

.ant-tabs-nav {
  @apply px-8 pt-2;
}

.ant-tabs-tab > div {
  @apply pb-1 font-semibold text-secondary;
}

.ant-tabs-tab.ant-tabs-tab-active > div {
  @apply text-heading !important;
}
.ant-select span.ant-select-selection-item {
  @apply font-medium;
}

.pdf-viewer-container {
  #proxy-renderer {
    @apply h-full;

    #msdoc-renderer {
      @apply h-full;
    }
  }
}

.ant-spin .ant-spin-dot-item {
  background-color: #ffb800 !important;
}

.dashboard_tooltip {
  @apply max-w-max;
}

